put in max width for background image to fix desktop view cannot get grid to work with this view remove the spacing in desktop mode

--- a/app/styles/_lesson.scss
+++ b/app/styles/_lesson.scss
@@ -53,8 +53,7 @@
         margin: 0 auto;
         /*width: 553px;
         height: 550px;*/
-        /*width: 100%;
-        height: 45em;*/
+       max-width: 40em;
         .congrats {
             /*font-size: 30px;*/
             font-size: 1.8em;
@@ -99,7 +98,7 @@
             .forms {
                 /*background: #efefef;*/
                 /*padding: 5px;*/
-                padding: 4em;
+                padding: 5em;
                 border-radius: 10px;
             }
         }
